--- a/feretui/tests/snapshots/test_page/test_login_1/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_login_1/snapshot.html
@@ -23,7 +23,8 @@
  <div>
   
  </div>
-</div>            <div class="field">
+</div>
+            <div class="field">
  <label class="label" for="password">
   Password
       
