--- a/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
@@ -19,7 +19,8 @@
   </p>
   
  </div>
-</div>            <div class="field">
+</div>
+            <div class="field">
  <label class="label" for="password">
   Password
       
