--- a/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
@@ -1,23 +1,31 @@
 <form hx-post="/feretui/action/login_password" hx-swap="outerHTML" hx-trigger="submit">
  <div class="container">
   
+  <div class="notification is-danger">
+   Test
+  </div>
+  
   <div class="has-text-centered">
    <div class="field">
  <label class="label" for="login">
   Login
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
  </label>
  <div class="control">
-  <input autocomplete="username" class="input is-danger " id="login" name="login" required type="text" value="">
+  <input autocomplete="username" class="input is-link " id="login" name="login" required type="text" value="test">
  </div>
  <div>
-  
-  <p class="help is-danger">
-   This field is required.
-  </p>
   
  </div>
 </div>
@@ -25,18 +33,22 @@
  <label class="label" for="password">
   Password
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
  </label>
  <div class="control">
-  <input autocomplete="current-password" class="input is-danger " id="password" name="password" required type="password" value="">
+  <input autocomplete="current-password" class="input is-link " id="password" name="password" required type="password" value="">
  </div>
  <div>
-  
-  <p class="help is-danger">
-   This field is required.
-  </p>
   
  </div>
 </div>
