--- a/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
@@ -6,6 +6,14 @@
  <label class="label" for="login">
   Login
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
@@ -25,6 +33,14 @@
  <label class="label" for="password">
   Password
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
