--- a/feretui/tests/snapshots/test_form/test_form_render_radio_required/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_radio_required/snapshot.html
@@ -18,7 +18,7 @@
   <ul>
    
    <li>
-    <label class="radio" for="test">
+    <label class="radio" for="test-0">
      <input id="test-0" name="test" required type="radio" value="foo">
                 <label class="radio" for="test-0">Foo</label>
                 
@@ -29,7 +29,7 @@
    </li>
    
    <li>
-    <label class="radio" for="test">
+    <label class="radio" for="test-1">
      <input id="test-1" name="test" required type="radio" value="bar">
                 <label class="radio" for="test-1">Bar</label>
                 
