--- a/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
@@ -50,7 +50,7 @@
   <ul>
    
    <li>
-    <label class="radio" for="lang">
+    <label class="radio" for="lang-0">
      <input id="lang-0" name="lang" required type="radio" value="en">
                 <label class="radio" for="lang-0">English</label>
                 
