--- a/feretui/tests/snapshots/test_form/test_form_render_bool_data_readonly/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_bool_data_readonly/snapshot.html
@@ -1,1 +1,1 @@
-<input disabled id="test" name="test" type="checkbox" value="y">
+<input disabled id="test" name="test" readonly type="checkbox" value="y">
