--- a/feretui/tests/snapshots/test_form/test_form_render_radio/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_radio/snapshot.html
@@ -10,7 +10,7 @@
   <ul>
    
    <li>
-    <label class="radio" for="test">
+    <label class="radio" for="test-0">
      <input id="test-0" name="test" type="radio" value="foo">
                 <label class="radio" for="test-0">Foo</label>
                 
@@ -21,7 +21,7 @@
    </li>
    
    <li>
-    <label class="radio" for="test">
+    <label class="radio" for="test-1">
      <input id="test-1" name="test" type="radio" value="bar">
                 <label class="radio" for="test-1">Bar</label>
                 
