--- a/feretui/tests/snapshots/test_form/test_form_render_radio_honrizontal/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_radio_honrizontal/snapshot.html
@@ -8,7 +8,7 @@
  </label>
  <div class="control">
   
-  <label class="radio" for="test">
+  <label class="radio" for="test-0">
    <input id="test-0" name="test" type="radio" value="foo">
             <label class="radio" for="test-0">Foo</label>
             
@@ -17,7 +17,7 @@
    </span>
   </label>
   
-  <label class="radio" for="test">
+  <label class="radio" for="test-1">
    <input id="test-1" name="test" type="radio" value="bar">
             <label class="radio" for="test-1">Bar</label>
             
