--- a/feretui/tests/snapshots/test_form/test_form_render_radio_nolabel_2/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_radio_nolabel_2/snapshot.html
@@ -1,6 +1,6 @@
 <div class="field">
- <label class="label" for="test">
-  Test
+ <label class="label" for="">
+  
       
   <span>
    
@@ -11,7 +11,7 @@
    
    <li>
     <label class="radio" for="test-0">
-     <input id="test-0" name="test" type="radio" value="foo">
+     <input checked id="test-0" name="test" type="radio" value="foo">
                 <label class="radio" for="test-0">Foo</label>
                 
      <span>
