--- a/feretui/tests/snapshots/test_form/test_form_render_field_data_readonly/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_field_data_readonly/snapshot.html
@@ -1,1 +1,7 @@
-<input class="input is-static" id="name" name="name" readonly required type="text" value="test">
+<div class="field">
+ 
+ <div class="control">
+  <input class="input is-static " disabled id="name" name="name" readonly required type="text" value="test">
+ </div>
+ 
+</div>
