--- a/feretui/tests/snapshots/test_form/test_get_field_choices_data_readonly_2/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_get_field_choices_data_readonly_2/snapshot.html
@@ -1,1 +1,7 @@
-<span></span>
+<div class="field">
+ 
+ <div class="control">
+  <select class="input is-static " disabled id="name" name="name" readonly><option value="foo">Foo</option><option value="bar">Bar</option></select>
+ </div>
+ 
+</div>
