--- a/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_3/snapshot.html
@@ -3,42 +3,58 @@
   
   <div class="has-text-centered">
    <div class="field">
+ 
  <label class="label" for="login">
   Login
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
  </label>
+ 
  <div class="control">
   <input autocomplete="username" class="input is-danger " id="login" name="login" required type="text" value="">
  </div>
- <div>
-  
-  <p class="help is-danger">
-   This field is required.
-  </p>
-  
- </div>
+ 
+ <p class="help is-danger">
+  This field is required.
+ </p>
+ 
 </div>
             <div class="field">
+ 
  <label class="label" for="password">
   Password
       
+  <span class="content is-small">
+   (
+   <span class="has-text-link">
+    required
+   </span>
+   )
+  </span>
+  
   <span>
    
   </span>
  </label>
+ 
  <div class="control">
   <input autocomplete="current-password" class="input is-danger " id="password" name="password" required type="password" value="">
  </div>
- <div>
-  
-  <p class="help is-danger">
-   This field is required.
-  </p>
-  
- </div>
+ 
+ <p class="help is-danger">
+  This field is required.
+ </p>
+ 
 </div>
    <div class="buttons">
     <button class="button is-primary is-fullwidth" type="submit">
