Fixed form translation

--- a/feretui/tests/snapshots/test_action/test_login_signup_6/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_signup_6/snapshot.html
@@ -36,7 +36,7 @@
   <div id="feretui-signup-field-lang">
    <div class="field">
  <label class="label" for="lang">
-  Lang
+  Language
       
   <span class="content is-small">
    (
