--- a/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
@@ -32,7 +32,7 @@
   <div id="feretui-signup-field-lang">
    <div class="field">
  <label class="label" for="lang">
-  Lang
+  Language
       
   <span class="content is-small">
    (
