--- a/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
@@ -1,5 +1,5 @@
 <div class="panel mb-4">
- <p class="panel-heading">
+ <div class="panel-heading">
   <span>
    
   </span>
@@ -14,7 +14,7 @@
    </span>
    
   </span>
- </p>
+ </div>
  
       <a class="button panel-block selected-buttons-resource-None-view-None" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
  <span>
