--- a/feretui/resources/tests/snapshots/test_list/test_view_render/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_list/test_view_render/snapshot.html
@@ -589,7 +589,7 @@
 </div>
               
               <div class="panel mb-4">
- <p class="panel-heading">
+ <div class="panel-heading">
   <span>
    
   </span>
@@ -599,7 +599,7 @@
   <span>
    
   </span>
- </p>
+ </div>
  
       <a class="button panel-block" hx-post="/feretui/action/resource?action=call&amp;method=print_1">
  <span>
