Refactor the POC

--- a/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
@@ -1,12 +1,12 @@
 <div class="container is-fluid content" id="resource-foo-view-bar">
  <form>
-  <div class="buttons">
+  <div class="buttons is-centered">
    
   </div>
   <div class="container">
    
   </div>
-  <div class="buttons">
+  <div class="buttons is-centered">
    
   </div>
  </form>
