--- a/feretui/resources/tests/snapshots/test_list/test_view_render/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_list/test_view_render/snapshot.html
@@ -34,7 +34,7 @@
    <div class="column">
     <div class="columns is-vcentered">
      <div class="column is-narrow">
-      <div class="buttons">
+      <div class="buttons is-centered">
        
       </div>
      </div>
@@ -458,7 +458,7 @@
     </div>
     <div class="columns is-vcentered">
      <div class="column is-narrow">
-      <div class="buttons">
+      <div class="buttons is-centered">
        
       </div>
      </div>
