Added decorator to validate resource action and added goto

--- a/feretui/resources/tests/snapshots/test_common/test_get_header_buttons/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_header_buttons/snapshot.html
@@ -1,4 +1,4 @@
-<button class="button is-primary" hx-get="/feretui/action/goto?view=other">
+<button class="button is-primary" hx-get="/feretui/action/resource?action=goto&amp;view=other">
  <span class="icon">
   <i class="fa-solid fa-plus">
   </i>
