--- a/feretui/resources/tests/snapshots/test_create/test_save_error/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_create/test_save_error/snapshot.html
@@ -3,7 +3,7 @@
   <div class="columns">
    <div class="column is-3" id="label">
     <h1>
-     Foo
+     New
     </h1>
    </div>
    <div class="column" id="buttons">
