--- a/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
@@ -3,7 +3,7 @@
   <div class="buttons is-centered">
    
   </div>
-  <div class="container">
+  <div class="container mb-4">
    
       
   </div>
