--- a/feretui/resources/tests/snapshots/test_create/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_create/test_render_1/snapshot.html
@@ -34,7 +34,7 @@
    <div class="column is-3" is="status">
    </div>
   </div>
-  <div class="container">
+  <div class="container mb-4">
    
    <div class="notification is-danger">
     With error
