--- a/feretui/resources/tests/snapshots/test_create/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_create/test_render_1/snapshot.html
@@ -3,7 +3,7 @@
   <div class="columns">
    <div class="column is-3" id="label">
     <h1>
-     Foo
+     New
     </h1>
    </div>
    <div class="column" id="buttons">
@@ -34,7 +34,7 @@
    <div class="column is-3" is="status">
    </div>
   </div>
-  <div class="container">
+  <div class="container mb-4">
    
    <div class="notification is-danger">
     With error
