--- a/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
@@ -33,4 +33,16 @@
  </span>
 </a>
       
+      <a class="button panel-block" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
+ <span>
+  
+ </span>
+ <span>
+  Bar
+ </span>
+ <span>
+  
+ </span>
+</a>
+      
 </div>
