--- a/feretui/resources/tests/snapshots/test_delete/test_delete_raise/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_delete_raise/snapshot.html
@@ -36,6 +36,9 @@
   </div>
   <div class="container">
    
+   <h2>
+    Selected Foo :
+   </h2>
    <ul>
     
     <li>
@@ -48,7 +51,9 @@
     
    </ul>
    <p>
-    Do you wanted delete its ?
+    <strong>
+     Do you wanted delete its ?
+    </strong>
    </p>
   </div>
   <div class="buttons is-centered">
