--- a/feretui/resources/tests/snapshots/test_delete/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_render_1/snapshot.html
@@ -40,6 +40,9 @@
     With error
    </div>
    
+   <h2>
+    Selected Foo :
+   </h2>
    <ul>
     
     <li>
@@ -52,7 +55,9 @@
     
    </ul>
    <p>
-    Do you wanted delete its ?
+    <strong>
+     Do you wanted delete its ?
+    </strong>
    </p>
   </div>
   <div class="buttons is-centered">
