Added print css

--- a/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_render_1/snapshot.html
@@ -1,13 +1,13 @@
 <div class="container is-fluid content" id="resource-foo-view-bar">
  <form>
-  <div class="buttons is-centered">
+  <div class="buttons is-centered is-hidden-print">
    
   </div>
   <div class="container mb-4">
    
       
   </div>
-  <div class="buttons is-centered">
+  <div class="buttons is-centered is-hidden-print">
    
   </div>
  </form>
