--- a/feretui/resources/tests/snapshots/test_delete/test_render_1/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_render_1/snapshot.html
@@ -6,8 +6,8 @@
      Delete
     </h1>
    </div>
-   <div class="column" id="buttons">
-    <div class="buttons is-centered">
+   <div class="column is-hidden-print" id="buttons">
+    <div class="buttons is-centered is-hidden-print">
      
       <button class="button is-danger" type="submit">
  <span class="icon">
@@ -60,7 +60,7 @@
     </strong>
    </p>
   </div>
-  <div class="buttons is-centered">
+  <div class="buttons is-centered is-hidden-print">
    
       <button class="button is-danger" type="submit">
  <span class="icon">
