--- a/feretui/resources/tests/snapshots/test_update/test_render_2/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_update/test_render_2/snapshot.html
@@ -6,8 +6,8 @@
      1
     </h1>
    </div>
-   <div class="column" id="buttons">
-    <div class="buttons is-centered">
+   <div class="column is-hidden-print" id="buttons">
+    <div class="buttons is-centered is-hidden-print">
      
       <button class="button is-primary" type="submit">
  <span class="icon">
@@ -90,7 +90,7 @@
 </div>
       
   </div>
-  <div class="buttons is-centered">
+  <div class="buttons is-centered is-hidden-print">
    
       <button class="button is-primary" type="submit">
  <span class="icon">
