--- a/feretui/resources/tests/snapshots/test_update/test_save_empty/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_update/test_save_empty/snapshot.html
@@ -6,8 +6,8 @@
      foo
     </h1>
    </div>
-   <div class="column" id="buttons">
-    <div class="buttons is-centered">
+   <div class="column is-hidden-print" id="buttons">
+    <div class="buttons is-centered is-hidden-print">
      
       <button class="button is-primary" type="submit">
  <span class="icon">
@@ -80,7 +80,7 @@
 </div>
       
   </div>
-  <div class="buttons is-centered">
+  <div class="buttons is-centered is-hidden-print">
    
       <button class="button is-primary" type="submit">
  <span class="icon">
