--- a/feretui/tests/snapshots/test_page/test_homepage/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_homepage/snapshot.html
@@ -5,7 +5,7 @@
   </h1>
   <div class="container">
    <figure class="image 1by1">
-    <img src="/feretui/static/logo.png">
+    <img alt src="/feretui/static/logo.png">
    </figure>
   </div>
   <p>
