--- a/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
+++ b/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
@@ -31,7 +31,7 @@
    <nav aria-label="main navigation" class="navbar is-fixed-top" role="navigation">
     <div class="navbar-brand">
      <a class="navbar-item has-tooltip-right has-tooltip-arrow" data-tooltip="Go to the homepage" hx-get="/feretui/action/goto?page=homepage" hx-swap="innerHTML" hx-target="#body">
-      <img alt="FeretUI" src="/feretui/static/logo.png">
+      <img alt src="/feretui/static/logo.png">
      </a>
      <a _="on click toggle .is-active on me then toggle .is-active on #feretui-app-header-burger" aria-expanded="false" aria-label="menu" class="navbar-burger" data-target="feretui-app-header-burger" id="feretui-app-header-burger-button" role="button">
       <span aria-hidden="true">
@@ -84,7 +84,7 @@
   </h1>
   <div class="container">
    <figure class="image 1by1">
-    <img src="/feretui/static/logo.png">
+    <img alt src="/feretui/static/logo.png">
    </figure>
   </div>
   <p>
