--- a/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
@@ -31,7 +31,7 @@
      <table class="table is-fullwidth is-striped">
       <thead>
        <tr>
-        <th class="is-narrow">
+        <th class="is-narrow" id="checkbox-all-resource-foo-view-list">
          <input _="
                           on click 
                           set &lt;input[name='selected-rows-resource-foo-view-list']/&gt;'s checked to my.checked 
@@ -55,7 +55,7 @@
       </tbody>
       <tfoot>
        <tr>
-        <th class="is-narrow">
+        <th class="is-narrow" id="checkbox-all-resource-foo-view-list">
          <input _="
                           on click 
                           set &lt;input[name='selected-rows-resource-foo-view-list']/&gt;'s checked to my.checked 
