Fix ToolbarButtonMenu and ToolbarMenu

--- a/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
+++ b/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
@@ -54,7 +54,7 @@
  <div class="buttons">
   
           
-            <a class="button None" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#body">
+            <a class="button None" href="" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#body">
  <span>
   
  </span>
