--- a/feretui/tests/snapshots/test_menus/test_ToolBarButtonMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarButtonMenu/snapshot.html
@@ -1,4 +1,4 @@
-<a class="button None" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+<a class="button None" href="" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
