--- a/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
@@ -13,7 +13,7 @@
  <div class="navbar-dropdown">
   
           
-            <a class="navbar-item" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+            <a class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
