--- a/feretui/tests/snapshots/test_menus/test_ToolBarMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarMenu_description/snapshot.html
@@ -1,4 +1,4 @@
-<a class="navbar-item" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+<a class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
