Added aria-description in Menu to give tooltip accessible

--- a/feretui/tests/snapshots/test_menus/test_ToolBarButtonMenu_desciption/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarButtonMenu_desciption/snapshot.html
@@ -1,4 +1,4 @@
-<a class="button None" href="" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+<a aria-description="Test" class="button None" href="" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
