--- a/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu_description/snapshot.html
@@ -1,4 +1,4 @@
-<a class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
+<a aria-description="Test" class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
  <span>
   
  </span>
