--- a/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_description/snapshot.html
@@ -21,7 +21,7 @@
   
           
   <li>
-   <a class="menu-label" href="?page=test" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
+   <a aria-description="" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
  <span>
   
  </span>
