--- a/feretui/tests/snapshots/test_menus/test_AsideMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideMenu/snapshot.html
@@ -1,4 +1,4 @@
-<a class="menu-label" href="?page=test" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
+<a aria-description="" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
  <span>
   
  </span>
