--- a/feretui/tests/snapshots/test_menus/test_ToolBarButtonUrlMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarButtonUrlMenu/snapshot.html
@@ -1,4 +1,4 @@
-<a class="button None" href="https://feretui.readthedocs.io/en/latest/">
+<a aria-description="" class="button None" href="https://feretui.readthedocs.io/en/latest/">
  <span>
   
  </span>
