--- a/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
@@ -1,5 +1,5 @@
 <div class="navbar-item has-dropdown is-hoverable">
- <a class="navbar-link">
+ <a aria-description="" class="navbar-link">
   <span>
    
   </span>
@@ -13,7 +13,7 @@
  <div class="navbar-dropdown">
   
           
-            <a class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+            <a aria-description="" class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
