--- a/feretui/tests/snapshots/test_menus/test_ToolBarMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarMenu/snapshot.html
@@ -1,4 +1,4 @@
-<a class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+<a aria-description="" class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
  <span>
   
  </span>
