--- a/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
@@ -1,5 +1,5 @@
-<div class="navbar-item has-dropdown is-hoverable">
- <a aria-description="" class="navbar-link">
+<div _="on click or keyup[key=='Enter'] toggle .is-active on me" aria-description="" aria-expanded="false" aria-label="Test" class="navbar-item has-dropdown is-boxed" role="navigation" tabindex="0">
+ <a class="navbar-link">
   <span>
    
   </span>
