--- a/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
@@ -1,12 +1,12 @@
 <div class="panel mb-4">
  <div class="panel-heading">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <span>
    Test
   </span>
-  <span>
+  <span aria-hidden="true">
    
    <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Other">
     <i class="fa-solid fa-circle-info is-small">
@@ -17,13 +17,13 @@
  </div>
  
       <a class="button panel-block selected-buttons-resource-None-view-None" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <span>
   foo
  </span>
- <span>
+ <span aria-hidden="true">
   
   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Bar">
    <i class="fa-solid fa-circle-info is-small">
@@ -34,13 +34,13 @@
 </a>
       
       <a class="button panel-block" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <span>
   Bar
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
