--- a/feretui/tests/snapshots/test_action/test_login_signup_3/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_signup_3/snapshot.html
@@ -18,7 +18,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -46,7 +46,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -58,7 +58,7 @@
      <input id="lang-0" name="lang" required type="radio" value="en">
                 <label class="radio" for="lang-0">English</label>
                 
-     <span>
+     <span aria-hidden="true">
       
      </span>
     </label>
@@ -87,7 +87,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -116,7 +116,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
