--- a/feretui/tests/snapshots/test_action/test_login_signup_6/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_signup_6/snapshot.html
@@ -22,7 +22,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -46,7 +46,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -58,7 +58,7 @@
      <input checked id="lang-0" name="lang" required type="radio" value="en">
                 <label class="radio" for="lang-0">English</label>
                 
-     <span>
+     <span aria-hidden="true">
       
      </span>
     </label>
@@ -83,7 +83,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -108,7 +108,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
