--- a/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_description/snapshot.html
@@ -1,6 +1,6 @@
-<div>
+<div aria-description="Test" aria-label="Test">
  <p class="menu-label">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <span>
@@ -8,7 +8,7 @@
     Test
    </strong>
   </span>
-  <span>
+  <span aria-hidden="true">
    
    <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
     <i class="fa-solid fa-circle-info is-small">
@@ -22,13 +22,13 @@
           
   <li>
    <a aria-description="" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <span>
   Test
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
