--- a/feretui/tests/snapshots/test_menus/test_AsideUrlMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideUrlMenu/snapshot.html
@@ -1,11 +1,11 @@
 <a class="menu-label" href="https://feretui.readthedocs.io/en/latest/">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <span>
   Test
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
