--- a/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_signup_1/snapshot.html
@@ -18,7 +18,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -42,7 +42,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -54,7 +54,7 @@
      <input id="lang-0" name="lang" required type="radio" value="en">
                 <label class="radio" for="lang-0">English</label>
                 
-     <span>
+     <span aria-hidden="true">
       
      </span>
     </label>
@@ -79,7 +79,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -104,7 +104,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
