--- a/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
@@ -19,7 +19,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -29,7 +29,7 @@
  </div>
  
 </div>
-            <div class="field">
+          <div class="field">
  
  <label class="label" for="password">
   Password
@@ -42,7 +42,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
