--- a/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
+++ b/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/after.html
@@ -55,13 +55,13 @@
   
           
             <a aria-description="" class="button None" href="" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#body">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
