--- a/feretui/tests/snapshots/test_form/test_form_render_bool/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_bool/snapshot.html
@@ -3,7 +3,7 @@
  <label class="checkbox" for="test">
   <input id="test" name="test" type="checkbox" value="y">
         Test
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
