--- a/feretui/tests/snapshots/test_menus/test_AsideUrlMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideUrlMenu_description/snapshot.html
@@ -1,11 +1,11 @@
 <a class="menu-label" href="https://feretui.readthedocs.io/en/latest/">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <span>
   Test
  </span>
- <span>
+ <span aria-hidden="true">
   
   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
    <i class="fa-solid fa-circle-info is-small">
