--- a/feretui/tests/snapshots/test_menus/test_ToolBarButtonUrlMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarButtonUrlMenu/snapshot.html
@@ -1,11 +1,11 @@
 <a aria-description="" class="button None" href="https://feretui.readthedocs.io/en/latest/">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
