--- a/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu_description/snapshot.html
@@ -1,12 +1,12 @@
 <div _="on click or keyup[key=='Enter'] toggle .is-active on me" aria-description="Test" aria-expanded="false" aria-label="Test" class="navbar-item has-dropdown is-boxed" role="navigation" tabindex="0">
  <a class="navbar-link">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <strong>
    Test
   </strong>
-  <span>
+  <span aria-hidden="true">
    
    <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
     <i class="fa-solid fa-circle-info is-small">
@@ -19,13 +19,13 @@
   
           
             <a aria-description="" class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
- <span>
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
