--- a/feretui/tests/snapshots/test_page/test_login_1/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_login_1/snapshot.html
@@ -15,7 +15,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -25,7 +25,7 @@
  </div>
  
 </div>
-            <div class="field">
+          <div class="field">
  
  <label class="label" for="password">
   Password
@@ -38,7 +38,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
