--- a/feretui/tests/snapshots/test_page/test_resource_3/snapshot.html
+++ b/feretui/tests/snapshots/test_page/test_resource_3/snapshot.html
@@ -16,7 +16,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
@@ -26,7 +26,7 @@
  </div>
  
 </div>
-            <div class="field">
+          <div class="field">
  
  <label class="label" for="password">
   Password
@@ -39,7 +39,7 @@
    )
   </span>
   
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </label>
