Action in actionset become button

--- a/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
@@ -16,7 +16,7 @@
   </span>
  </div>
  
-      <a class="button panel-block selected-buttons-resource-None-view-None" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
+      <button class="button panel-block selected-buttons-resource-None-view-None is-fullwidth" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
  <span aria-hidden="true">
   
  </span>
@@ -31,9 +31,9 @@
   </span>
   
  </span>
-</a>
+</button>
       
-      <a class="button panel-block" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
+      <button class="button panel-block is-fullwidth" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
  <span aria-hidden="true">
   
  </span>
@@ -43,6 +43,6 @@
  <span aria-hidden="true">
   
  </span>
-</a>
+</button>
       
 </div>
