--- a/feretui/resources/tests/snapshots/test_read/test_render/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_read/test_render/snapshot.html
@@ -123,7 +123,7 @@
   </span>
  </div>
  
-      <a class="button panel-block" hx-post="/feretui/action/resource?action=call&amp;method=print_1">
+      <button class="button panel-block is-fullwidth" hx-post="/feretui/action/resource?action=call&amp;method=print_1">
  <span aria-hidden="true">
   
  </span>
@@ -133,7 +133,7 @@
  <span aria-hidden="true">
   
  </span>
-</a>
+</button>
       
 </div>
                 
