--- a/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu/snapshot.html
@@ -1,11 +1,11 @@
-<a class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
- <span>
+<a aria-description="" class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
