--- a/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_common/test_get_actions/snapshot.html
@@ -1,12 +1,12 @@
 <div class="panel mb-4">
  <div class="panel-heading">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <span>
    Test
   </span>
-  <span>
+  <span aria-hidden="true">
    
    <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Other">
     <i class="fa-solid fa-circle-info is-small">
@@ -16,14 +16,14 @@
   </span>
  </div>
  
-      <a class="button panel-block selected-buttons-resource-None-view-None" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
- <span>
+      <button class="button panel-block selected-buttons-resource-None-view-None is-fullwidth" disabled="disabled" hx-post="/feretui/action/resource?action=call&amp;method=foo">
+ <span aria-hidden="true">
   
  </span>
  <span>
   foo
  </span>
- <span>
+ <span aria-hidden="true">
   
   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Bar">
    <i class="fa-solid fa-circle-info is-small">
@@ -31,18 +31,18 @@
   </span>
   
  </span>
-</a>
+</button>
       
-      <a class="button panel-block" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
- <span>
+      <button class="button panel-block is-fullwidth" hx-post="/feretui/action/resource?action=goto&amp;view=bar">
+ <span aria-hidden="true">
   
  </span>
  <span>
   Bar
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
-</a>
+</button>
       
 </div>
