--- a/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_cascade/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideHeaderMenu_cascade/snapshot.html
@@ -1,6 +1,6 @@
-<div>
+<div aria-description="" aria-label="Test">
  <p class="menu-label">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <span>
@@ -8,7 +8,7 @@
     Test
    </strong>
   </span>
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </p>
@@ -16,9 +16,9 @@
   
           
   <li>
-   <div>
+   <div aria-description="" aria-label="Test">
  <p class="menu-label">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <span>
@@ -26,7 +26,7 @@
     Test
    </strong>
   </span>
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </p>
@@ -34,14 +34,14 @@
   
           
   <li>
-   <a class="menu-label" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
- <span>
+   <a aria-description="" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
+ <span aria-hidden="true">
   
  </span>
  <span>
   Test
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
