--- a/feretui/tests/snapshots/test_menus/test_AsideMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideMenu/snapshot.html
@@ -1,11 +1,11 @@
-<a class="menu-label" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
- <span>
+<a aria-description="" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
+ <span aria-hidden="true">
   
  </span>
  <span>
   Test
  </span>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
