--- a/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarDropDownMenu/snapshot.html
@@ -1,26 +1,26 @@
-<div class="navbar-item has-dropdown is-hoverable">
+<div _="on click or keyup[key=='Enter'] toggle .is-active on me" aria-description="" aria-expanded="false" aria-label="Test" class="navbar-item has-dropdown is-boxed" role="navigation" tabindex="0">
  <a class="navbar-link">
-  <span>
+  <span aria-hidden="true">
    
   </span>
   <strong>
    Test
   </strong>
-  <span>
+  <span aria-hidden="true">
    
   </span>
  </a>
  <div class="navbar-dropdown">
   
           
-            <a class="navbar-item" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
- <span>
+            <a aria-description="" class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
  </span>
 </a>
