--- a/feretui/tests/snapshots/test_menus/test_ToolBarMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarMenu_description/snapshot.html
@@ -1,11 +1,11 @@
-<a class="navbar-item" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
- <span>
+<a aria-description="Test" class="navbar-item" href="?page=test" hx-get="/feretui/action/goto?page=test" hx-swap="innerHTML" hx-target="#feretui-body">
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
    <i class="fa-solid fa-circle-info is-small">
