--- a/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_ToolBarUrlMenu_description/snapshot.html
@@ -1,11 +1,11 @@
-<a class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
- <span>
+<a aria-description="Test" class="navbar-item" href="https://feretui.readthedocs.io/en/latest/">
+ <span aria-hidden="true">
   
  </span>
  <strong>
   Test
  </strong>
- <span>
+ <span aria-hidden="true">
   
   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
    <i class="fa-solid fa-circle-info is-small">
