Added aria-description on fields

--- a/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
+++ b/feretui/tests/snapshots/test_action/test_login_password_6/snapshot.html
@@ -6,9 +6,9 @@
   </div>
   
   <div class="has-text-centered">
-   <div class="field">
+   <div aria-description="" class="field">
  
- <label class="label" for="login">
+ <label aria-description="" class="label" for="login">
   Login
       
   <span class="content is-small">
@@ -29,9 +29,9 @@
  </div>
  
 </div>
-          <div class="field">
+          <div aria-description="" class="field">
  
- <label class="label" for="password">
+ <label aria-description="" class="label" for="password">
   Password
       
   <span class="content is-small">
