--- a/feretui/tests/snapshots/test_form/test_form_render_bool_readonly/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_bool_readonly/snapshot.html
@@ -1,6 +1,6 @@
 <div class="field">
  
- <label class="checkbox" for="test">
+ <label aria-description="" class="checkbox" for="test">
   <input disabled id="test" name="test" readonly type="checkbox" value="y">
         Test
   <span aria-hidden="true">
