--- a/feretui/tests/snapshots/test_form/test_form_render_field_no_label/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_field_no_label/snapshot.html
@@ -1,4 +1,4 @@
-<div class="field">
+<div aria-description="" class="field">
  
  <div class="control">
   <input class="input is-link " id="name" name="name" required type="text" value="test">
