--- a/feretui/tests/snapshots/test_form/test_get_field_choices_no_label/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_get_field_choices_no_label/snapshot.html
@@ -1,4 +1,4 @@
-<div class="field">
+<div aria-description="" class="field">
  
  <div class="control">
   <select class="input " id="name" name="name"><option selected value="foo">Foo</option><option value="bar">Bar</option></select>
