--- a/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
+++ b/feretui/resources/tests/snapshots/test_delete/test_delete/snapshot.html
@@ -99,9 +99,9 @@
  
  <div class="panel-block">
   <div class="container">
-   <div class="field">
+   <div aria-description="" class="field">
  
- <label class="label" for="pk">
+ <label aria-description="" class="label" for="pk">
   Pk
       
   <span aria-hidden="true">
