--- a/feretui/tests/snapshots/test_form/test_form_render_field_translation/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_field_translation/snapshot.html
@@ -1,6 +1,6 @@
-<div class="field">
+<div aria-description="" class="field">
  
- <label class="label" for="name">
+ <label aria-description="" class="label" for="name">
   Nom
       
   <span aria-hidden="true">
