--- a/feretui/tests/snapshots/test_form/test_form_render_field_with_errors/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_field_with_errors/snapshot.html
@@ -1,6 +1,6 @@
-<div class="field">
+<div aria-description="" class="field">
  
- <label class="label" for="name">
+ <label aria-description="" class="label" for="name">
   Name
       
   <span class="content is-small">
