--- a/feretui/tests/snapshots/test_form/test_form_render_radio_nolabel_2/snapshot.html
+++ b/feretui/tests/snapshots/test_form/test_form_render_radio_nolabel_2/snapshot.html
@@ -1,5 +1,5 @@
 <div class="field">
- <label class="label" for="">
+ <label aria-description="" class="label" for="">
   
       
   <span aria-hidden="true">
