--- a/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/before.html
+++ b/feretui/tests/snapshots/test_feretui/test_register_auth_menus_1/before.html
@@ -100,13 +100,32 @@
    </div>
   </main>
   <footer class="is-hidden-print">
-   <div class="content has-text-centered">
-    <p>
-     <strong>
-      FeretUI
-     </strong>
-     by Js Suzanne.
-    </p>
+   <div class="container">
+    <div class="columns is-desktop">
+     <div class="column is-2-desktop">
+      <p>
+       <a class="navbar-item" href="?page=sitemap" hx-get="/feretui/action/goto?page=sitemap" hx-swap="innerHTML" hx-target="#body">
+        <span class="ml-0 mr-0 icon">
+         <i class="fa-solid fa-sitemap">
+         </i>
+        </span>
+        <strong>
+         Sitemap
+        </strong>
+       </a>
+      </p>
+     </div>
+     <div class="column content has-text-centered">
+      <p>
+       <strong>
+        FeretUI
+       </strong>
+       by Js Suzanne.
+      </p>
+     </div>
+     <div class="column is-2-desktop">
+     </div>
+    </div>
    </div>
   </footer>
   
