--- a/feretui/tests/snapshots/test_menus/test_AsideMenu_description/snapshot.html
+++ b/feretui/tests/snapshots/test_menus/test_AsideMenu_description/snapshot.html
@@ -1,16 +1,18 @@
-<a aria-description="Test" class="menu-label" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
- <span aria-hidden="true">
-  
- </span>
- <span>
-  Test
- </span>
- <span aria-hidden="true">
-  
-  <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
-   <i class="fa-solid fa-circle-info is-small">
-   </i>
+<li>
+ <a aria-description="Test" href="?page=test&amp;in-aside=" hx-get="/feretui/action/goto?page=test&amp;in-aside=" hx-swap="innerHTML" hx-target="#feretui-aside-body">
+  <span aria-hidden="true">
+   
   </span>
-  
- </span>
-</a>
+  <span>
+   Test
+  </span>
+  <span aria-hidden="true">
+   
+   <span class="ml-0 icon has-tooltip-bottom has-tooltip-arrow" data-tooltip="Test">
+    <i class="fa-solid fa-circle-info is-small">
+    </i>
+   </span>
+   
+  </span>
+ </a>
+</li>
